<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_bg"
    tools:context=".activities.MainActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="20dp"
            android:paddingBottom="30dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingTop="30dp"
                android:paddingBottom="8dp">

                <!-- Profile Card -->
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:background="@drawable/gradient_bg2"
                    android:elevation="3dp"
                    android:minWidth="200dp"
                    android:padding="8dp">

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/profilePic"
                        android:layout_width="55dp"
                        android:layout_height="55dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:scaleType="centerCrop"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:shapeAppearanceOverlay="@style/circleImage"
                        tools:srcCompat="@tools:sample/avatars" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:text="@string/welcome"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        app:layout_constraintStart_toEndOf="@id/profilePic"
                        app:layout_constraintTop_toTopOf="@id/profilePic" />

                    <TextView
                        android:id="@+id/nameTxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/name"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="@id/textView2"
                        app:layout_constraintTop_toBottomOf="@id/textView2" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <Space
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1" />



                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/gradient_bg2"
                    android:id="@+id/cartBtn"
                android:elevation="3dp"
                    android:padding="12dp"
                    android:src="@drawable/cart" />


            </LinearLayout>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/smart_home_nsmooth_services"
                android:textColor="@color/black"
                android:textSize="40sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="16dp"
                android:background="@drawable/gradient_bg2"
                android:drawableStart="@drawable/search"
                android:drawablePadding="8dp"
                android:elevation="3dp"
                android:ems="10"
                android:hint="Search Services"
                android:inputType="text"
                android:paddingHorizontal="16dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="14sp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/categoryList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="8dp"
                    android:layout_marginTop="16dp"
                    android:clipToPadding="false"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ProgressBar
                    android:id="@+id/progressBarCategory"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="@+id/categoryList"
                    app:layout_constraintEnd_toEndOf="@+id/categoryList"
                    app:layout_constraintStart_toStartOf="@+id/categoryList"
                    app:layout_constraintTop_toTopOf="@+id/categoryList" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/banner"
                android:layout_width="match_parent"
                android:layout_height="360dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="16dp"
                android:scaleType="centerCrop"
                app:shapeAppearanceOverlay="@style/circleImage"
                tools:srcCompat="@tools:sample/backgrounds/scenic" />

        </LinearLayout>
    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomAppBar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="16dp"
        android:background="@drawable/gradient_bg2"
        android:elevation="3dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
           android:paddingTop="4dp"
            >

            <ImageView
                android:id="@+id/homeBtn"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="0.25"
                android:layout_gravity="center"
                android:padding="18dp"
                app:srcCompat="@drawable/bottom_btn1" />

            <ImageView
                android:id="@+id/bookmarkBtn"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="0.25"
                android:layout_gravity="center"
                android:padding="18dp"
                app:srcCompat="@drawable/bottom_btn3" />

            <ImageView
                android:id="@+id/profileBtn"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="0.25"
                android:layout_gravity="center"
                android:padding="18dp"
                app:srcCompat="@drawable/bottom_btn4" />
        </LinearLayout>
    </com.google.android.material.bottomnavigation.BottomNavigationView>
</androidx.constraintlayout.widget.ConstraintLayout>